packages/svelte/tests/compiler-errors/samples/dollar-binding-declaration-runes-2/main.svelte
<svelte:options runes />

<script>
	function ok($) {}
	function error() {
		let $;
	}
</script>
